--- a/comunidad.html
+++ b/comunidad.html
@@ -82,8 +82,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>UPO<br />
+								Muy lejos</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -91,7 +91,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">manuelaguedaalicia@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
