--- a/cursos.html
+++ b/cursos.html
@@ -28,7 +28,6 @@
 							<li><a href="index.html">Inicio</a></li>
 							<li class="active"><a href="cursos.html">Cursos</a></li>
 							<li><a href="recursos.html">Recursos</a></li>
-							<li><a href="comunidad.html">Comunidad</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -110,8 +109,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>UPO<br />
+								Muy lejos</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -119,7 +118,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">manuelaguedaalicia@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
