--- a/recursos.html
+++ b/recursos.html
@@ -28,7 +28,6 @@
 							<li><a href="index.html">Inicio</a></li>
 							<li><a href="cursos.html">Cursos</a></li>
 							<li class="active"><a href="recursos.html">Recursos</a></li>
-							<li><a href="comunidad.html">Comunidad</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -111,17 +110,67 @@
 													<li><a href="http://www.webquestcreator2.com/majwq/ver/ver/42165" class="button">Ir a Webquest</a></li>
 												</ul>
 											</article>
+											<article>
+												<header>
+													<span class="date">12 noviembre 2017</span>
+													<h2><a href="#">Errores más comunes en inglés<br />
+													 </a></h2>
+												</header>
+
+												<p>En el siguiente vídeo verás que los errores que cometes son normales. ¡Casi todo el mundo los comete! Aprende cuales son.</p>
+												<ul class="actions">
+													<iframe width="508" height="310" src="https://www.youtube.com/embed/MjVHzebsRyU" frameborder="0" gesture="media" allowfullscreen></iframe>
+												</ul>
+												<article>
+													<header>
+														<span class="date">10 noviembre 2017</span>
+														<h2><a href="#">Symbaloo<br />
+														</a></h2>
+													</header>
+													<p>Aquí tienes un enlace muy útil a la página de Symbaloo, donde podrás encontrar multitud de enlaces y recursos para ayudarte a mejorar tu inglés.</p>
+													<ul class="actions">
+														<li><a href="https://www.symbaloo.com/mix/englishteachingsources" class="button">Ir a Symbaloo</a></li>
+													</ul>
+												</article>
+												<article>
+													<header>
+														<span class="date">8 noviembre 2017</span>
+														<h2><a href="#">Preposiciones<br />
+														</a></h2>
+													</header>
+													<p>¿Seguro que te sabes todas las preposiciones?</p>
+													<ul class="actions">
+														<a href="#" class="image fit"><img src="images/Word_Art.png" alt="" /></a>
+													</ul>
+												</article>
+												<article>
+													<header>
+														<span class="date">6 noviembre 2017</span>
+														<h2><a href="#">Educaplay<br />
+														</a></h2>
+													</header>
+													<p>En este post te traemos una actividad muy divertida que te resultará familiar. ¡A ver cuántas aciertas!</p>
+													<ul class="actions">
+														<li><a href="#" class="width="508" height="310"><img src="images/pasapalabraecudaplay.png" alt="" /></a></li>
+														<li><a href="https://es.educaplay.com/es/recursoseducativos/3394594/word_play.htm" class="button">¡Empieza a jugar!</a></li>
+													</ul>
+												</article>
+												<article>
+													<header>
+														<span class="date">5 noviembre 2017</span>
+														<h2><a href="#">To see<br />
+														</a></h2>
+													</header>
+													<p>Aprende los diversos sinónimos que hay del verbo SEE</p>
+													<ul class="actions">
+														<a href="#" class="image fit"><img src="images/wordcloudsee.png" alt="" /></a>
+													</ul>
+												</article>
+											</article>
 											</section>
 
 											<h3>Icons</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-												<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-											</ul>
-											<ul class="icons alt">
+							         <ul class="icons alt">
 												<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 												<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
@@ -156,8 +205,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>UPO<br />
+								Muy lejos</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -165,7 +214,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">manuelaguedaalicia@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
