--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 							<li class="active"><a href="index.html">Inicio</a></li>
 							<li><a href="cursos.html">Cursos</a></li>
 							<li><a href="recursos.html">Recursos</a></li>
-							<li><a href="comunidad.html">Comunidad</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -61,7 +60,7 @@
 									<p>Encuentra aquí todos los recursos necesarios para aprender<br />
 									y mejorar tu nivel de inglés.<br /></p>
 								</header>
-								<a href="#" class="image main"><img src="images/fotolondres.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/london.jpg" alt="" /></a>
 								<ul class="actions">
 									<li><a href="#" class="button big">¡Empecemos!</a></li>
 								</ul>
@@ -161,8 +160,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>UPO<br />
+								Muy lejos</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -170,7 +169,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">manuelaguedaalicia@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
